added 'Follow us' to social icons

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
           OCF Stuff Placeholder
         </div>
         <div class="col-sm text-center text-muted">
+          <h6>Follow us!</h6>
           <div class="social-icon" style="font-size: 3em">
             <a target="_blank" title="follow us on facebook" href="https://www.facebook.com/fcsacappella" style="color: DodgerBlue">
               <i class="fab fa-facebook"></i>
