--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./">About</a>
+            <a class="nav-link" href="subpages/about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./">Members</a>
