--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
   <title>FCS - About</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="subpages/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/full-width-pics.css" rel="stylesheet">
+  <link href="subpages/css/full-width-pics.css" rel="stylesheet">
 
 </head>
 
