--- a/index.html
+++ b/index.html
@@ -8,188 +8,121 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>For Christ's Sake</title>
+  <title>FCS - Auditions</title>
 
-  <!-- Font Awesome Icons ye-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-
-  <!-- Plugin CSS -->
-  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
-  <!-- Theme CSS - Includes Bootstrap -->
+  <!-- Bootstrap core CSS -->
   <link href="css/creative.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/full-width-pics.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/8bffaae9cb.js"></script>
+
 
 </head>
 
-<body id="page-top">
+<body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand " href="#page-top">For Christ's Sake</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto my-2 my-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="subpages/about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./">Members</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./">Auditions</a>
-          </li>
-        </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-2">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">For Christ's Sake</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto my-2 my-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="members.html">Members</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="auditions.html">Audition <span class="sr-only">(current)</span> </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!-- Masthead -->
-  <header class="masthead">
-    <div class="container h-100 text-center d-table">
-      
-      <div class="d-table-cell align-middle">
-        <img src="img/white.png" id="mainLogo" style='width: 80%; opacity: 0.5'>
-      </div>
-    </div>
+  <!-- Header - set the background image for the header in the line below -->
+  <header class="py-5 bg-image-full" style="background-image: url('img/bigsproul.jpg');">
+    <img class="img-fluid d-block mx-auto" src="img/logosmallwhite.png" alt="">
   </header>
 
-  <!-- About Section -->
-  <section class="page-section bg-primary" id="about">
+  <!-- Content section -->
+  <section class="py-5">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">Christian A Cappella At Berkeley</h2>
-          <hr class="divider light my-4">
-          <p class="text-white-20 mb-4">
-            Founded by a group of Cal students in 2000, For Christ's Sake is a Christian a cappella group composed of students across campus fellowships and churches. We seek to inspire the Berkeley community to worship the Lord by glorifying Him and proclaiming the gospel through song and testimony.
-          </p>
-          <a class="btn btn-light btn-xl " href="#services">Read More About Us!</a>
-        </div>
-      </div>
+      <h1>Audition For Us!</h1>
+      <p class="lead">Something something steph has RBF</p>
+      <p>Come audition for us at Royston and stuff we are chill dudes</p>
     </div>
   </section>
 
-  <!-- Services Section -->
-  <section class="page-section" id="services">
-    <div class="container">
-      <h2 class="text-center mt-0">Our Performances</h2>
-      <hr class="divider my-4">
-      <div class="row justify-content-center">
-        <div class="col-lg-4 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Sproul</h3>
-            <p class="text-muted mb-0">Talk about dat weekly sproul</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Concert</h3>
-            <p class="text-muted mb-0">Concert info, either our last concert or our upcoming concert</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Other Gigs</h3>
-            <p class="text-muted mb-0">Project light, mission fundraisers, suitcase clinic, etc.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
-  <!-- Portfolio Section -->
-  <section id="ourPics"class="container-fluid p-5">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="container">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="1"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="img/fcm.jpg" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>We out here chillin</h5>
-                  <p>we still chillin</p>
-                </div>
+  <!-- Content section -->
+  <section class="py-5">
+    <div class="container">
+      <div class="row my-5">
+          <div class="col"><hr></div>
+          <div class="col-auto"><h4>FAQ</h4></div>
+          <div class="col"><hr></div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8">
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header" id="headingOne">
+                <h5 class="mb-0">
+                  <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Collapsible Group Item #1
+                  </button>
+                </h5>
               </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="img/concert.jpg" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Dang it's gettin cold</h5>
-                  <p>holy moly</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="img/fcw.jpg" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Wait it's hot again</h5>
-                  <p>This is insane</p>
+
+              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                 </div>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Collapsible Group Item #2
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Collapsible Group Item #3
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      
-    </div>
-
-  </section>
-
-  <!-- Call to Action Section 
-  <section class="page-section bg-light text-white">
-    <div class="container text-center">
-      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
-    </div>
-  </section>
-  -->
-
-  <!-- Contact Section -->
-  <section class="page-section" id="contact">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Find us on social media!</h2>
-          <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (202) 555-0149</div>
-        </div>
-        <div class="col-lg-4 mr-auto text-center">
-          <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+        <div class="col-lg-4">
+          <img class="img-fluid d-block mx-auto" src="img/fcm.jpg" alt="" style="border-radius: 4%">
         </div>
       </div>
     </div>
@@ -197,42 +130,35 @@
 
   <!-- Footer -->
   <footer class="bg-light py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm text-center text-muted">
-          OCF Stuff Placeholder
-        </div>
-        <div class="col-sm text-center text-muted">
-          <h6>Follow us!</h6>
-          <div class="social-icon" style="font-size: 3em">
-            <a target="_blank" title="follow us on facebook" href="https://www.facebook.com/fcsacappella" style="color: DodgerBlue">
-              <i class="fab fa-facebook"></i>
-            </a>
-            <a target="_blank" title="follow us on youtube" href="https://www.youtube.com/fcsberkeley" style="color: Crimson">
-              <i class="fab fa-youtube"></i>
-            </a>
-            <a target="_blank" title="follow us on instagram" href="https://www.instagram.com/fcsacappella" style="color: SandyBrown">
-              <i class="fab fa-instagram"></i>
-            </a>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm text-center text-muted">
+            OCF Stuff Placeholder
+          </div>
+          <div class="col-sm text-center text-muted">
+            <h6>Follow us!</h6>
+            <div class="social-icon" style="font-size: 3em">
+              <a target="_blank" title="follow us on facebook" href="https://www.facebook.com/fcsacappella" style="color: DodgerBlue">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a target="_blank" title="follow us on youtube" href="https://www.youtube.com/fcsberkeley" style="color: Crimson">
+                <i class="fab fa-youtube"></i>
+              </a>
+              <a target="_blank" title="follow us on instagram" href="https://www.instagram.com/fcsacappella" style="color: SandyBrown">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm text-center text-muted">
+            Copyright &copy; 2019 - Start Bootstrap
           </div>
         </div>
-        <div class="col-sm text-center text-muted">
-          Copyright &copy; 2019 - Start Bootstrap
-        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/creative.min.js"></script>
 
 </body>
 
