--- a/members.html
+++ b/members.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>FCS - About</title>
+  <title>FCS - Members</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/creative.css" rel="stylesheet">
@@ -24,31 +24,30 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">For Christ's Sake</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home
-              
-            </a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="members.html">Members</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="auditions.html">Audition</a>
-          </li>
-        </ul>
+      <div class="container">
+        <a class="navbar-brand" href="#">For Christ's Sake</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="members.html">Members <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="auditions.html">Audition</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
   <!-- Header - set the background image for the header in the line below -->
   <header class="py-5 bg-image-full" style="background-image: url('img/bigsproul.jpg');">
@@ -58,7 +57,7 @@
   <!-- Content section -->
   <section class="py-5">
     <div class="container">
-      <h1>About</h1>
+      <h1>Members</h1>
       <p class="lead">Something something steph has RBF</p>
       <p>Come audition for us at Royston and stuff we are chill dudes</p>
     </div>
